# SpeculativeDecodingPapers

./: README.md
Spec_Bench/: ROADMAP.md  Readme.md  eval.sh  requirements.txt
Spec_Bench/evaluation/: equal.py  inference_baseline.py  inference_eagle.py  inference_lookahead.py  inference_medusa.py  inference_pld.py  inference_rest.py  inference_sps.py  speed.py  utils.py
Spec_Bench/model/medusa/: utils.py
Spec_Bench/model/pld/: pld.py
Spec_Bench/model/rest/DraftRetriever/: Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
Spec_Bench/model/rest/DraftRetriever/draftretriever/: __init__.py  draftretriever.pyi
Spec_Bench/model/rest/DraftRetriever/src/: lib.rs
Spec_Bench/model/rest/DraftRetriever/src/libsais/: libsais.c  libsais.h
Spec_Bench/model/rest/datastore/: datastore.sh  get_datastore_chat.py
Spec_Bench/model/rest/rest/inference/: cli.py
Spec_Bench/model/rest/rest/model/: kv_cache.py  modeling_llama_kv.py  rest_model.py  utils.py
