[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "src/*",
    "Cargo.toml",
    "draftretriever/*.py",
    "draftretriever/*.pyi"
]

[tool.poetry]
name = "draftretriever"
version = "0.1.0"
authors = ["Zhenyu He <hezhenyu@stu.pku.edu.cn>", "Zexuan Zhong <zzhong@princeton.edu>", "Tianle Cai <tianle.cai@princeton.edu>"]
description = "Retriver for searching draft tokens for speculative decoding"
readme = "README.md"
repository = "https://github.com/zhenyuhe00/DraftRetriever"
homepage = "https://github.com/zhenyuhe00/DraftRetriever"
license = "MIT"
keywords = [
    "substring",
    "pattern",
    "search",
    "suffix",
    "array",
    "rust",
    "pyo3"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
gitpython = "*"
wheel = "*"
pytest-runner = "*"
maturin = "*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--tb=native",
    "--pythonwarnings=all",
]
testpaths = [
    "tests",
]
